5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1602_2895.log
== TEST (2019-03-20 18:21:34) 
-- CODE:
var= input("quantidade de jogos: ")
valor=
print(valor)
-- ERROR:
File "XXXX", line 2
    valor=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:22:10) 
-- CODE:
var= input("quantidade de jogos: ")
valor=10
print(valor)
-- EXECUTION TIME:
0.157064
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
10
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
10
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:22:12) 
-- CODE:
var= input("quantidade de jogos: ")
valor=10
print(valor)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:22:19) 
-- CODE:
var= input("quantidade de jogos: ")
valor=10
print(valor)
-- EXECUTION TIME:
0.15141
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
10
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
10
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:22:37) 
-- CODE:
var= input("quantidade de jogos: ")
valor=float(10)
print(valor)
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:22:49) 
-- CODE:
var= input("quantidade de jogos: ")
valor=float(10)
print(valor)
-- EXECUTION TIME:
0.164657
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
10.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:23:02) 
-- CODE:
var= input("quantidade de jogos: ")
valor=int(10)
print(valor)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:23:09) 
-- CODE:
var= input("quantidade de jogos: ")
valor=int(10)
print(valor)
-- EXECUTION TIME:
0.141787
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
10
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
10
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:23:58) 
-- CODE:
var= input("quantidade de jogos: ")
valor=10.0
print(valor)
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:24:05) 
-- CODE:
var= input("quantidade de jogos: ")
valor=10.0
print(valor)
-- EXECUTION TIME:
0.156912
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
10.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:30:50) 
-- CODE:
A= input("quantidade de jogos: ")
B=input("o valor unitario: ")
C=input("o valor do frete: ")
valor=precoA*precoB
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=precoA*precoB
NameError: name 'precoA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:31:10) 
-- CODE:
A= input("quantidade de jogos: ")
B=input("o valor unitario: ")
C=input("o valor do frete: ")
valor=10
print(valor)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:31:21) 
-- CODE:
A= input("quantidade de jogos: ")
B=input("o valor unitario: ")
C=input("o valor do frete: ")
valor=10
print(valor)
-- EXECUTION TIME:
0.159649
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
10
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
10
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:31:46) 
-- CODE:
A= input("quantidade de jogos: ")
B=input("o valor unitario: ")
C=input("o valor do frete: ")
valor=
print("valor")
-- ERROR:
File "XXXX", line 4
    valor=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:32:00) 
-- CODE:
A= input("quantidade de jogos: ")
B=input("o valor unitario: ")
C=input("o valor do frete: ")
valor= 30
print("valor")
-- OUTPUT:
valor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:32:11) 
-- CODE:
A= input("quantidade de jogos: ")
B=input("o valor unitario: ")
C=input("o valor do frete: ")
valor= 30
print("valor")
-- EXECUTION TIME:
0.18616
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
valor
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
valor
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
valor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:36:05) 
-- CODE:
A= float(input("quantidade de jogos: "))
B=input("o valor unitario: ")
C=input("o valor do frete: ")
valor= float(A*8+45)
print(valor)
-- OUTPUT:
141.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:36:27) 
-- CODE:
A= float(input("quantidade de jogos: "))
B=input("o valor unitario: ")
C=input("o valor do frete: ")
valor= float(A*8+45)
print(valor)
-- EXECUTION TIME:
0.195087
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
141.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
125.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
2013.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:36:59) 
-- CODE:
A= float(input("quantidade de jogos: "))
B=input("o valor unitario: ")
C=input("o valor do frete: ")
valor= float(A*8 + 45)
print(valor)
-- OUTPUT:
141.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:37:52) 
-- CODE:
A= float(input("quantidade de jogos: "))
B=input("o valor unitario: ")
C=input("o valor do frete: ")
valor= float(A*8 + 45)
print(valor)
-- EXECUTION TIME:
0.139747
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
141.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
125.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
2013.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:38:45) 
-- CODE:
A= float(input("quantidade de jogos: "))
B=input("o valor unitario: ")
C=input("o valor do frete: ")
valor= float(input(A*8 + 45))
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= float(input(A*8 + 45))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:39:18) 
-- CODE:
A= float(input("quantidade de jogos: "))
B=input("o valor unitario: ")
C=input("o valor do frete: ")
valor= float(input(A*8 + 45))
print(valor)
-- EXECUTION TIME:
0.207964
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    valor= float(input(A*8 + 45))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:39:31) 
-- CODE:
A= float(input("quantidade de jogos: "))
B=input("o valor unitario: ")
C=input("o valor do frete: ")
valor= float(input(8 + 45))
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= float(input(8 + 45))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:39:50) 
-- CODE:
A= float(input("quantidade de jogos: "))
B=input("o valor unitario: ")
C=input("o valor do frete: ")
valor= float(input(8 + 45))
print(valor)
-- EXECUTION TIME:
0.174924
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    valor= float(input(8 + 45))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:40:04) 
-- CODE:
A= float(input("quantidade de jogos: "))
B=input("o valor unitario: ")
C=input("o valor do frete: ")
valor= float(input(8 + 45))
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= float(input(8 + 45))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:40:34) 
-- CODE:
A= float(input("quantidade de jogos: "))
B=input("o valor unitario: ")
C=input("o valor do frete: ")
valor= input(8 + 45)
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= input(8 + 45)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:40:52) 
-- CODE:
A= float(input("quantidade de jogos: "))
B=input("o valor unitario: ")
C=input("o valor do frete: ")
valor= input(8 + 45)
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= input(8 + 45)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:41:04) 
-- CODE:
A= float(input("quantidade de jogos: "))
B=input("o valor unitario: ")
C=input("o valor do frete: ")
valor= input(8 + 45)
print(valor)
-- EXECUTION TIME:
0.12761
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    valor= input(8 + 45)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:43:31) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=9
B=5
C=45
valor=
print(valor)
-- ERROR:
File "XXXX", line 7
    valor=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:44:11) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=9
B=5
C=45
valor=precoA*nA+precoB*nB+precoC*nC
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor=precoA*nA+precoB*nB+precoC*nC
NameError: name 'precoA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:44:36) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=9
B=5
C=45
valor=precoA*nA+precoB*nB+precoC*nC
print(valor)
-- EXECUTION TIME:
0.146058
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 7, in <module>
    valor=precoA*nA+precoB*nB+precoC*nC
NameError: name 'precoA' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:45:05) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=9
B=5
C=45
valor=precoA*precoB
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor=precoA*precoB
NameError: name 'precoA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:45:17) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=9
B=5
C=45
valor=precoA*precoB
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor=precoA*precoB
NameError: name 'precoA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:45:27) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=9
B=5
C=45
valor=precoA*precoB
print(valor)
-- EXECUTION TIME:
0.139005
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 7, in <module>
    valor=precoA*precoB
NameError: name 'precoA' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:46:29) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=9
B=5
C=45
total=float(A*B)
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(valor)
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:46:43) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=9
B=5
C=45
total=float(A*B)
print(total)
-- EXECUTION TIME:
0.138974
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
45.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
45.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:46:45) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=9
B=5
C=45
total=float(A*B)
print(total)
-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:46:56) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=9
B=5
C=45
total=float(A*B)
print(total)
-- EXECUTION TIME:
0.214862
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
45.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
45.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:47:06) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=9
B=5
C=45.0
total=float(A*B)
print(total)
-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:47:15) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=9
B=5
C=45.0
total=float(A*B)
print(total)
-- EXECUTION TIME:
0.160493
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
45.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
45.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:47:31) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=9
B=5
C=45.0
total=float(A*B+C)
print(total)
-- OUTPUT:
90.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:47:47) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=9
B=5
C=45.0
total=float(A*B+C)
print(total)
-- EXECUTION TIME:
0.22387
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
90.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
90.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
90.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:48:10) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=9
B=5
C=45.0
total=float(input(A*B+C))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total=float(input(A*B+C))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:48:28) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=9
B=5
C=45.0
total=input(A*B+C)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total=input(A*B+C)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:48:38) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=9
B=5
C=45.0
total=input(A*B+C)
print(total)
-- EXECUTION TIME:
0.151743
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 7, in <module>
    total=input(A*B+C)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:49:21) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=9
B=5
C=45.0
total=input(A*B+C)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total=input(A*B+C)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:50:06) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=9
B=5
C=45.0
total=input(A*B+C)
print(total)
-- EXECUTION TIME:
0.153674
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 7, in <module>
    total=input(A*B+C)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:51:04) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=8
B=45.0
total=input(A*B)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total=input(A*B)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:51:23) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
A=8
B=45.0
total=input(A*B)
print(total)
-- EXECUTION TIME:
0.187596
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 6, in <module>
    total=input(A*B)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:51:56) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
total=input(A*B)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=input(A*B)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:52:28) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
total=float(input(A*B))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=float(input(A*B))
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:53:02) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
total=float(input(A*B))
print(total)
-- EXECUTION TIME:
0.123473
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    total=float(input(A*B))
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:53:04) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
total=float(input(A*B))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=float(input(A*B))
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:53:25) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
total=float(input(A+B))
print(total)
-- EXECUTION TIME:
0.177667
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    total=float(input(A+B))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:53:27) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
total=float(input(A+B))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=float(input(A+B))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:53:55) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
total=float(A+B)
print(total)
-- OUTPUT:
1245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:54:11) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
total=float(A+B)
print(total)
-- EXECUTION TIME:
0.173229
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1245.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1067.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
246975.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:54:35) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
total=float(A*B+C)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=float(A*B+C)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:54:53) 
-- CODE:
A= input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= input("o valor do frete: ")
total=float(A*B+C)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=float(A*B+C)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:56:34) 
-- CODE:
A= int(input("quantidade de jogos: ")
B= int(input("o valor unitario: ")
C= int(input("o valor do frete: ")
total=float(A*A+C)
print(total)
-- ERROR:
File "XXXX", line 2
    B= int(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:56:41) 
-- CODE:
A= int(input("quantidade de jogos: ")
B= int(input("o valor unitario: ")
C= int(input("o valor do frete: ")
total=float(A*A+C)
print(total)
-- ERROR:
File "XXXX", line 2
    B= int(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:56:55) 
-- CODE:
A= int(input("quantidade de jogos: ")
B= input("o valor unitario: ")
C= int(input("o valor do frete: ")
total=float(A*A+C)
print(total)
-- ERROR:
File "XXXX", line 2
    B= input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:57:19) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= input("o valor unitario: ")
C= int(input("o valor do frete: ")
total=float(A*A+C)
print(total)
-- ERROR:
File "XXXX", line 4
    total=float(A*A+C)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:58:09) 
-- CODE:
nA= int(input("quantidade de jogos: "))
nB= input("o valor unitario: ")
nC= int(input("o valor do frete: ")
total=float
print(total)
-- ERROR:
File "XXXX", line 4
    total=float
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:59:18) 
-- CODE:
nA= int(input("quantidade de jogos: "))
nB= input("o valor unitario: ")
nC= int(input("o valor do frete: ")
total=float(nA*nB+C)
print(total)
-- ERROR:
File "XXXX", line 4
    total=float(nA*nB+C)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:59:29) 
-- CODE:
nA= int(input("quantidade de jogos: "))
nB= input("o valor unitario: ")
nC= int(input("o valor do frete: ")
total=float(nA*nB+nC)
print(total)
-- ERROR:
File "XXXX", line 4
    total=float(nA*nB+nC)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:00:20) 
-- CODE:
nA= int(input("quantidade de jogos: "))
nB= input("o valor unitario: ")
nC= int(input("o valor do frete: ")
total=float(nA*nA+nC)
print(total)
-- ERROR:
File "XXXX", line 4
    total=float(nA*nA+nC)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:00:48) 
-- CODE:
nA= int(input("quantidade de jogos: "))
nB= input("o valor unitario: ")
nC= int(input("o valor do frete: ")
total=float(valor*nA+nC)
print(total)
-- ERROR:
File "XXXX", line 4
    total=float(valor*nA+nC)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:01:38) 
-- CODE:
nA= int(input("quantidade de jogos: "))
nB= input("o valor unitario: ")
nC= int(input("o valor do frete: ")
total=float(valornB*nA+nC)
print(total)
-- ERROR:
File "XXXX", line 4
    total=float(valornB*nA+nC)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:01:56) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= input("o valor unitario: ")
C= int(input("o valor do frete: ")
total=float(valornB*nA+nC)
print(total)
-- ERROR:
File "XXXX", line 4
    total=float(valornB*nA+nC)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:02:17) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= input("o valor unitario: ")
C= int(input("o valor do frete: ")
total=float(B*A+C)
print(total)
-- ERROR:
File "XXXX", line 4
    total=float(B*A+C)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:02:33) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= input("o valor unitario: ")
C= int(input("o valor do frete: ")
total=float(B*B+C)
print(total)
-- ERROR:
File "XXXX", line 4
    total=float(B*B+C)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:02:43) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= input("o valor unitario: ")
C= int(input("o valor do frete: ")
total=float(B*B+A)
print(total)
-- ERROR:
File "XXXX", line 4
    total=float(B*B+A)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:03:03) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= input("o valor unitario: ")
C= input("o valor do frete: ")
total=float(B*B+A)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=float(B*B+A)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:03:25) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= input("o valor unitario: ")
C= input("o valor do frete: ")
total=float(B*A+C)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=float(B*A+C)
ValueError: could not convert string to float: '45.045.045.045.045.045.045.045.045.045.045.045.078.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:03:36) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= input("o valor unitario: ")
C= input("o valor do frete: ")
total=float(B*A+C)
print(total)
-- EXECUTION TIME:
0.155907
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    total=float(B*A+C)
ValueError: could not convert string to float: '45.045.045.045.045.045.045.045.045.045.045.045.078.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:03:53) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= input("o valor unitario: ")
C= input("o valor do frete: ")
total=float(B*A+C)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=float(B*A+C)
ValueError: could not convert string to float: '45.045.045.045.045.045.045.045.045.045.045.045.078.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:04:15) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= input("o valor unitario: ")
C= input("o valor do frete: ")
total=float(B*A+C)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=float(B*A+C)
ValueError: could not convert string to float: '45.045.045.045.045.045.045.045.045.045.045.045.078.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:05:01) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= input("o valor unitario: ")
C= input("o valor do frete: ")
total=float(input(B*A+C))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=float(input(B*A+C))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:05:25) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= input("o valor unitario: ")
C= input("o valor do frete: ")
total=input(B*A+C)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=input(B*A+C)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:05:40) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= input("o valor unitario: ")
C= input("o valor do frete: ")
total=input(B*A+C)
print(total)
-- EXECUTION TIME:
0.167076
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    total=input(B*A+C)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:06:49) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= float(input("o valor unitario: "))
C= Float(input("o valor do frete: "))
total=float(B*A+C)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    C= Float(input())
NameError: name 'Float' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:07:16) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= float(input("o valor unitario: "))
C= float(input("o valor do frete: "))
total=float(B*A+C)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:07:28) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= float(input("o valor unitario: "))
C= float(input("o valor do frete: "))
total=float(B*A+C)
print(total)
-- EXECUTION TIME:
0.216485
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 02:36:06) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= float(input("o valor unitario: "))
C= float(input("o valor do frete: "))
total=float(B*A+C)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 02:36:29) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= float(input("o valor unitario: "))
C= float(input("o valor do frete: "))
total=float(B*A+C)
print(total)
-- EXECUTION TIME:
0.181009
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 02:38:54) 
-- CODE:
A= int(input("quantidade de jogos: "))
B= float(input("o valor unitario: "))
C= float(input("o valor do frete: "))
total=float(B*A+C)
print(total)
-- EXECUTION TIME:
0.122227
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
